--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: black;
+    outline: none;
+    font-family: "Roboto", sans-serif;
 }
 
-main {
+body {
+    background-color: #000000;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-top: 156px;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 38px;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 126px;
 }
