--- a/style.css
+++ b/style.css
@@ -24,5 +24,11 @@ h2 {
     line-height: 38px;
     color: #FFFFFF;
     text-align: center;
-    margin-top: 126px;
+    margin-top: 105px;
+}
+
+p {
+    color: #FFFFFF;
+    font-size: 80px;
+    font-weight: bold;
 }
