--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #000000;
+    background: linear-gradient(to bottom, #000000, #531d48);
     display: flex;
     align-items: center;
     justify-content: center;
